# the-sniper

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  bot_session.session  pyproject.toml  setup.cfg
config/: config.example.yaml
data/: gmgn_24h_vol_ranked.json
migrations/: create_account.sql  create_account_chat.sql  create_account_metric.sql  create_chat_messages.sql  create_chat_metadata.sql  create_chat_metric_definitions.sql  create_chat_metric_values.sql  create_collections.sql  create_entities.sql  create_ip_pool.sql  create_kol.sql  create_tg_links.sql  create_user_account.sql  create_user_metric.sql  create_users.sql  insert_chat_metric_definitions.sql
src/: aggregator.py  archiver.py  bot_client.py  chat_client.py  config.py  crawler.py  doxx_tweet.py  entity_importer.py  group_processor.py  handlers.py  main.py  meme_crawler.py  message_crawler.py  message_processor.py  new_account.py  scheduler.py  service.py  stats.py  summarizer.py
src/common/: account.py  agent_client.py  bot_client.py  config.py  r2_client.py  types.py  utils.py
src/helpers/: entity_extractor.py  ip_proxy_helper.py  message_helper.py  quality_evaluation_helper.py  quality_evaluation_processor.py
src/processors/: account_heartbeat.py  account_heartbeat_processor.py  doxx_tweet.py  doxx_tweet_processor.py  entity_extractor.py  entity_importer.py  gmgn_crawler.py  group_classifier.py  group_importer.py  group_indexer.py  group_info_updater.py  group_processor.py  group_queue_processor.py  meme_crawler.py  message_processor.py  message_queue.py  metric_processor.py  msg_queue_processor.py  new_account.py  processor.py  quality_evaluation_processor.py  score_summarizer.py  score_summary.py  tg_link_importer.py  tg_link_pre_processor.py  tg_link_processor.py
src/prompts/: doxx_tweet_prompts.py
src/scrapers/: base.py  config.py  runner.py
src/scrapers/gmgn/: items.py  pipeline.py  spider.py
src/scripts/: how-to-use.md  new_account.py  run_telegram_sync.sh  setup.py  setup_env.json  setup_example.yaml  setup_prod.json  test_proxy.py
src/services/: scheduler.py
