[tool.poetry]
name = "telegram-processor"
version = "0.1.0"
description = "A Telegram message processing server using Telethon"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
telethon = "^1.38.1"
redis = "^5.2.1"
asyncpg = "^0.30.0"

openai = "^1.59.6"
tweepy = "^4.14.0"
playwright = "^1.41.0"
scrapy = "^2.12.0"
[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawl = "src.crawler:main"
stats = "src.stats:main"
summarize = "src.summarizer:main"
scrape = "src.scrapers.runner:main"
